# why-it-happened

./: data_description  main.py  pyproject.toml
data/: claude-3-7-sonnet-20250219_causal_score.jsonl  claude-3-7-sonnet-20250219_mcq_fix.jsonl  dis_docs.json  dis_docs.jsonl  dis_sumy_pairs.json  event_pairs.jsonl  gemini-2.0-flash_causal_score.jsonl  gemini-2.0-flash_mcq_fix.jsonl  gpt-4.1-mini_mcq_fix.jsonl  gpt-4.1_causal_score.jsonl  gpt-4.1_mcq_fix.jsonl  llama3-70b_mcq_answer.jsonl  mcq_fix.json  mcq_fix.jsonl  mcq_t60_t80.jsonl  mcq_t80.jsonl  pairs_with_score.jsonl  raw_data.json  submission.jsonl  timeline.jsonl  topics.json  verify_data.jsonl
data_bkp/: doc_event_pairs.jsonl  doc_smy_pairs.jsonl  event_pairs_bkp.jsonl  gpt-4.1-mini_mcq_answer.jsonl  mcq.json  mcq.jsonl  raw_docs.json  raw_docs_events.json  raw_with_dis_docs.json  wrong_event_pairs.jsonl
sample_data/: event_pairs.jsonl  events.jsonl  mcq_0709.jsonl  mcq_0710.jsonl  mcq_wo_t68.jsonl  raw_data.json  submission.jsonl  submission_g500.jsonl  submission_l500.jsonl  timeline.jsonl  verify_data_g500.jsonl  verify_data_l500.jsonl
sample_data/annotation_data/: 0709.jsonl  (+7 more)
src/: a.ipynb  annotator.py  ask_model.py  do_summary.py  event_extractor.py  get_docs.py  get_event.py  get_mcq.py  get_mcq_fix.py  get_pairs_causal_score.py  get_summary.py  get_timeline.py  llm_base_model.py  mcq_solver.py  pipeline.ipynb  prompt_template.py  timeline_summarizer.py  utils.py
submit_data/: raw_data.json  smy_batch3.jsonl  submissions_batch2.jsonl  timeline_batch2.jsonl  timeline_batch3.jsonl  topics_batch2.json
(+48 files in other folders)
